# chess-dojo-scheduler

./: .gitignore  .prettierrc  App.tsx  CONTRIBUTION.md  README.md  amplify.yml  app.json  babel.config.js  credits.md  customHttp.yml  declaration.d.ts  env.d.ts  index.js  metro.config.js  package-lock.json  package.json
.github/: dependabot.yml
android/: build.gradle  settings.gradle
backend/: .gitignore  Makefile  README.md  analytics-simple.yml  config-dev.yml  config-prod.yml  config-simple.yml  config.yml  discord.yml.example  go.mod  go.sum  gomod.sh  meta-simple.yml  package-lock.json  package.json  serverless-compose.yml  serverless.yml  test.sh  tournament.yml.example  tsconfig.json  wix.yml.example
backend/pgnExport/gif/: .gitignore  Cargo.toml  README.md  config.yaml  samconfig.toml  serverless.yml  template.yaml
backend/pgnExport/gif/events/: event.json
backend/pgnExport/gif/gif/src/: api.rs  main.rs
backend/pgnExport/gif/gif/theme/: make-sprites.py
backend/pgnExport/gif/src/: api.rs  assets.rs  render.rs
blog/: next.config.mjs  package-lock.json  package.json
common/: .eslintrc.cjs  eslint.config.ts  index.ts  package-lock.json  package.json  tsconfig.json
docs/: userLogin.md
emails/: blackFriday_2023.html  dojo4_0.html  dojoDigest_vol1.html  dojoDigest_vol10.html  dojoDigest_vol11.html  dojoDigest_vol12.html  dojoDigest_vol13.html  dojoDigest_vol14.html  dojoDigest_vol15.html  dojoDigest_vol16.html  dojoDigest_vol17.html  dojoDigest_vol18.html  dojoDigest_vol19.html  dojoDigest_vol2.html  dojoDigest_vol20.html  dojoDigest_vol21.html  (+21 more)
(+4180 files in other folders)
